crates/test-files/fixtures/compile_errors/ctx_init.fe
contract Foo {
    pub fn bar() {
        let fake_ctx: Context = Context()
    }
}
